Divisibility and primality

--- a/tex/Algebra/Group Theory.tex
+++ b/tex/Algebra/Group Theory.tex
@@ -53,7 +53,7 @@
 	\end{proof}
 	
 	\bigskip\bigskip
-	\subsubsection{Corollaries of the group axioms}
+	\subsubsection{Corollaries of the group axioms}\label{sssection:corollaries-of-group-axioms}
 	The group operation is defined to map a unique tuple in $G \times G$ to a unique value in $G$ so that if we have $x,y \in G$ then $f((x, y)) = f(x,y) = xy \in G$ and for $a,b,c \in G$,
 	\[ a = b \iff (c, a) = (c, b) \implies f((c, a)) = f((c, b)) \iff ca = cb \]
 	\[ \therefore a = b \implies ca = cb \]
