--- a/tex/Foundations/Logic.tex
+++ b/tex/Foundations/Logic.tex
@@ -12,8 +12,9 @@
 		\[ \lnot (\forall n \logicsep P(n)) \equiv \exists n \logicsep \lnot P(n) \]
 		\[ \lnot (\exists n \logicsep P(n)) \equiv \forall n \logicsep \lnot P(n) \]
 		
-		\subheading{De Morgan's Law}
+		\subheading{De Morgan's Laws}
 		\[ \lnot (P \land Q) \equiv \lnot P \lor \lnot Q \]
+		\[ \lnot (P \lor Q) \equiv \lnot P \land \lnot Q \]
 		
 		\subheading{Implication}
 		\[ P \implies Q \equiv \lnot Q \lor P \]
