--- a/tex/MathsNotesBase.tex
+++ b/tex/MathsNotesBase.tex
@@ -206,7 +206,7 @@
 \newtheorem{lemma}{Lemma}[section]
 \newtheorem{claim}{Claim}[section]
 \theoremstyle{remark}
-\newtheorem*{definition}{Definition}
+\newtheorem{definition}{Definition}
 
 
 \newcommand{\labeledProposition}[2]{
